@@ -1,5 +1,7 @@
 Changes from 0.1.4 to 0.1.5-pre1:
 	- added the vtun package
+	- added the ltraf package
+	- all sources are stored locally at ftp.cflinux.hu for a last resort
 
 Changes from 0.1.4-pre3 to 0.1.4:
 	- version rename
